--- a/saboor.ca/src/global.css
+++ b/saboor.ca/src/global.css
@@ -28,7 +28,7 @@
   --color-gray-850: oklch(23.2% 0.03 290.733);
   --color-gray-900: oklch(21% 0.034 295.665);
   --color-gray-950: oklch(13% 0.028 292.692);
-  --depth: 1;
+  --lum-depth: 1;
 }
 
 @layer utilities {
